# web-rs

./: Cargo.toml  Dockerfile  README.md  diesel.toml  index.html  style.css
src/: error.rs  lib.rs  main.rs  models.rs  routes.rs
src/database/: connection.rs
src/pages/: authorization.rs  index.html
static/: index.html
tests/: test.rs
