[package]
name = "rustacean"
version = "0.1.0"
edition = "2021"

[dependencies]

# this is the development version of Yew
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }

rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_codegen = "0.4.11"

yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"

juniper = "0.15.1"

wasm-logger = "0.2.0"
web-sys = "0.3.5"

log = "0.4.1"

diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"

serde = "1.0.1"